[metadata]
name = blog-builder-th3james
version = 0.0.1
author = James Cox-Morton (th3james)
description = Static blog builder
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP :: Site Management
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
ignore =
  # W503 line break before binary operator (this is no longer PEP8 compliant)
  W503,
  # E203 whitespace before ':' (this is not PEP8 compliant)
  E203,
  # E501 line too long (rely on black doing good job)
  E501,

[mypy]
strict = True
